--- a/templates/default.html
+++ b/templates/default.html
@@ -12,7 +12,7 @@
         <div class="flex gap-4">
             <a data-load="/doc"
                 class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition cursor-pointer">Explorar</a>
-            <a href="https://github.com/tu-repo/framerly" target="_blank"
+            <a href="https://github.com/JossFramework/framerly" target="_blank"
                 class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition cursor-pointer">GitHub</a>
         </div>
 
