--- a/templates/default.html
+++ b/templates/default.html
@@ -4,7 +4,7 @@
         <strong class="border border-indigo-600 text-indigo-600 p-1 rounded-full px-4">  Hecho con ❤️ por JossFramework — Framerly v0.1</strong> <br>
         <h1 class="text-5xl font-bold text-indigo-600 mb-4">Framerly</h1>
         <p class="text-lg text-gray-700 mb-6 max-w-xl">
-            Un micro-framework ligero y poderoso que combina <strong>Navigo</strong>, <strong>Swiper</strong> y
+            Un micro-framework ligero y poderoso que combina <strong>Navigo</strong>, <strong>Js puro</strong> y
             componentes HTML para crear SPAs rápidas, sin compilar nada.
         </p>
 
