--- a/templates/default.html
+++ b/templates/default.html
@@ -1,5 +1,5 @@
   <!-- Landing estilo Svelte -->
-    <section class="flex flex-col items-center justify-center h-screen text-center px-6">
+    <section class="flex flex-col items-center justify-center h-[735px] text-center px-6" >
         
         <strong class="border border-indigo-600 text-indigo-600 p-1 rounded-full px-4">  Hecho con ❤️ por JossFramework — Framerly v0.1</strong> <br>
         <h1 class="text-5xl font-bold text-indigo-600 mb-4">Framerly</h1>
@@ -15,6 +15,9 @@
             <a href="https://github.com/JossFramework/framerly" target="_blank"
                 class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition cursor-pointer">GitHub</a>
         </div>
+
+
+        
 
    </section>
      <br>  
