--- a/templates/default.html
+++ b/templates/default.html
@@ -1,4 +1,4 @@
-  <!-- Landing estilo Svelte -->
+  <!-- Landing default-->
     <section class="flex flex-col items-center justify-center h-[735px] text-center px-6" >
         
         <strong class="border border-indigo-600 text-indigo-600 p-1 rounded-full px-4">  Hecho con ❤️ por JossFramework — Framerly v0.1</strong> <br>
