--- a/templates/default.html
+++ b/templates/default.html
@@ -1,22 +1,37 @@
-  <!-- Landing default-->
-    <section class="flex flex-col items-center justify-center h-[735px] text-center px-6" >
-        
-        <strong class="border border-indigo-600 text-indigo-600 p-1 rounded-full px-4">  Hecho con ❤️ por JossFramework — Framerly v0.1</strong> <br>
-        <h1 class="text-5xl font-bold text-indigo-600 mb-4">Framerly</h1>
-        <p class="text-lg text-gray-700 mb-6 max-w-xl">
-            Un micro-framework ligero y poderoso que combina <strong>Navigo</strong>, <strong>Js puro</strong> y
-            componentes HTML para crear SPAs rápidas, sin compilar nada.
-        </p>
+<!-- Landing default-->
+<section class="flex flex-col items-center justify-center h-[735px] text-center px-6">
 
 
-        <div class="flex gap-4">
-            <a data-load="/doc"
-                class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition cursor-pointer">Explorar</a>
-            <a href="https://github.com/JossFramework/framerly" target="_blank"
-                class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition cursor-pointer">GitHub</a>
-        </div>
+
+    <strong class="border border-indigo-600 text-indigo-600 p-1 rounded-full px-4"> Hecho con ❤️ por JossFramework —
+        Framerly v0.1</strong> <br>
+
+    <a href="https://www.jsdelivr.com/package/gh/JossFramework/framerly" target="_blank"
+        class="inline-flex items-center gap-2 bg-gray-900 px-3 py-1 rounded-md hover:opacity-80 transition mt-2 mb-4">
+        <img src="https://data.jsdelivr.com/v1/package/gh/JossFramework/framerly/badge" alt="Framerly CDN stats"
+            class="h-5" />
+        <span class="text-white text-sm">Descargas</span>
+    </a>
+
+    <h1 class="text-5xl font-bold text-indigo-600 mb-4">Framerly</h1>
 
 
-      
-   </section>
-     <br>  
+    <p class="text-lg text-gray-700 mb-6 max-w-xl">
+        Un micro-framework ligero y poderoso que combina <strong>Navigo</strong>, <strong>Js puro</strong> y
+        componentes HTML para crear SPAs rápidas, sin compilar nada.
+    </p>
+
+
+    <div class="flex gap-4">
+        <a data-load="/doc"
+            class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition cursor-pointer">Explorar</a>
+        <a href="https://github.com/JossFramework/framerly" target="_blank"
+            class="bg-gray-200 text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition cursor-pointer">GitHub</a>
+    </div>
+
+
+
+
+
+</section>
+<br>
